--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="shuttle.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="0.71" environment-image="legacy" exposure="0.65" skybox-image="legacy" shadow-softness="0.54" camera-orbit="-214.7deg 83.34deg 5.716m" field-of-view="40.3deg">
+    <model-viewer src="shuttle.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.jpeg" shadow-intensity="0.71" exposure="0.65" shadow-softness="0.54">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
