--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="shuttle.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.jpeg" shadow-intensity="0.71" exposure="0.65" shadow-softness="0.54">
+    <model-viewer src="shuttle.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.jpeg" shadow-intensity="0.71" exposure="0.65" shadow-softness="0.54" camera-orbit="-897.9deg 83.7deg 6.042m" field-of-view="30deg">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
